--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,9 @@ knitr::opts_chunk$set(
 )
 ```
 
+**Why did the statistician break up with their favorite variable?**                   
+*It was unstable.*     
+
 # Copyright information
 
 Copyright 2024, University of Pittsburgh. All Rights Reserved. License: [GPL-2](https://www.gnu.org/licenses/old-licenses/gpl-2.0.en.html)
@@ -24,11 +27,11 @@ Copyright 2024, University of Pittsburgh. All Rights Reserved. License: [GPL-2](
 
 This repository was created to support a presentation at the International Society of Nurses in Genetics:
 
-Heinsberg LW. Statistical Tools to Support Implementation: Variable Selection and Post-Selection Inference in Genomic Nursing Research. [Expert Lecturer Abstract, Podium]. Presented at the International Society of Nurses in Genetics, November 2024, San Diego, California. 
+Heinsberg LW. Statistical Tools to Support Implementation: Variable Selection and Post-Selection Inference in Genomic Nursing Research. (Expert Lecturer Abstract, Podium). Presented at the International Society of Nurses in Genetics, November 2024, San Diego, California. 
 
 The goal of this repository is to provide detailed code and a synthetic example data set to guide nurse scientists and other researchers in performing variable selection with a bootstrapping stability investigation to support valid post-selection inference. 
 
-A case study with example code is presented in CaseStudy.Rmd.
+A case study with example code is presented in [CaseStudy.Rmd](CaseStudy.Rmd).
 
 # Contact information
 
@@ -40,7 +43,11 @@ Lacey W. Heinsberg, PhD, RN: [law145\@pitt.edu](mailto:law145@pitt.edu){.email}
 
 This work was made possible through support from the National Institutes of Health under award numbers K99HD107030 and R00HD107030. I also extend my deepest gratitude to Dr. Daniel Weeks, who first introduced me to variable selection and post-selection inference. His support has been instrumental in shaping both what I do in science and how I approach it.
 
+<p align="center">
+  <img src="R_logo.png" alt="" width="400">
+</p>
+<p align="center" style="font-size: 12px;">
+  *Image made using DALL-E*
+</p>   
+                
 
-
-**Why did the statistician break up with their favorite variable?**
-*It was unstable.* 
