--- a/CaseStudy.Rmd
+++ b/CaseStudy.Rmd
@@ -7,18 +7,18 @@ header-includes:
 - \newcommand{\blandscape}{\begin{landscape}}
 - \newcommand{\elandscape}{\end{landscape}}
 output:
-  html_document:
-    df_print: paged
-    toc: yes
-    toc_depth: '5'
-    code_folding: show
+  github_document:
   pdf_document:
     toc: yes
     toc_depth: '5'
     number_sections: true
   toc: true
   html_preview: false
-  github_document:
+  html_document:
+    df_print: paged
+    toc: yes
+    toc_depth: '5'
+    code_folding: show
 ---
 
 ```{r setup, include=FALSE}
@@ -337,7 +337,7 @@ pander(overview)
 #overview
 ```
 
-Looking at everything together in a sorted/organized table, we note that the bootstrapped results resemble the global model ---- but interestingly we see that some of the effect estimates have opposite signs in the selected model!!!!!! This further supports the importance of adding stability investigations to your models when using variable selection as the directions of effect can vary based on which covariates are included in the final model!!!! (I didn't even plan that through data simulation!!!!!). 
+Looking at everything together in [Results_NUR_VarSel.pdf](Results_NUR_VarSel.pdf) in a sorted/organized table, we note that the bootstrapped results resemble the global model, suggesting little selection bias in the aggregated model. 
 
 ## Model selection frequency 
 
